# TinySQL

./: .gitignore  README.md
backend/: CMakeLists.txt  vcpkg.json
backend/include/api/: QueryApi.hpp
backend/include/catalog/: SystemCatalog.hpp  SystemColumnCatalog.hpp  SystemDatabaseCatalog.hpp  SystemIndexCatalog.hpp  SystemTableCatalog.hpp
backend/include/core/: ColumnMetadata.hpp  DataType.hpp  DatabaseMetadata.hpp  DateTime.hpp  ErrorCode.hpp  IndexMetadata.hpp  IndexType.hpp  QueryRequest.hpp  QueryResult.hpp  TableMetadata.hpp  TinySqlError.hpp  Value.hpp
backend/include/query/: BTreeIndex.hpp  BstIndex.hpp  ConditionEvaluator.hpp  CreateIndexStatement.hpp  DatabaseParser.hpp  DatabaseService.hpp  DatabaseStatement.hpp  DeleteStatement.hpp  DropTableStatement.hpp  IndexEntry.hpp  IndexKey.hpp  IndexService.hpp  InsertStatement.hpp  InsertValueConverter.hpp  OrderByClause.hpp  QueryProcessor.hpp  RecordQuickSort.hpp  RecordService.hpp  SelectStatement.hpp  SqlLexer.hpp  SqlLiteral.hpp  SqlParser.hpp  SqlStatement.hpp  SqlToken.hpp  TableService.hpp  UpdateStatement.hpp  WhereCondition.hpp
backend/include/storage/: BinaryReader.hpp  BinaryWriter.hpp  RecordCipher.hpp  StoragePaths.hpp  StoredRecord.hpp  TableFileManager.hpp
backend/src/: main.cpp
backend/src/api/: QueryApi.cpp
backend/src/catalog/: SystemCatalog.cpp  SystemColumnCatalog.cpp  SystemDatabaseCatalog.cpp  SystemIndexCatalog.cpp  SystemTableCatalog.cpp
backend/src/core/: ColumnMetadata.cpp  DataType.cpp  DatabaseMetadata.cpp  DateTime.cpp  IndexMetadata.cpp  IndexType.cpp  QueryRequest.cpp  QueryResult.cpp  TableMetadata.cpp  TinySqlError.cpp  Value.cpp
backend/src/query/: BTreeIndex.cpp  BstIndex.cpp  ConditionEvaluator.cpp  DatabaseParser.cpp  DatabaseService.cpp  IndexKey.cpp  IndexService.cpp  InsertValueConverter.cpp  QueryProcessor.cpp  RecordQuickSort.cpp  RecordService.cpp  SqlLexer.cpp  SqlParser.cpp  TableService.cpp
backend/src/storage/: BinaryReader.cpp  BinaryWriter.cpp  RecordCipher.cpp  StoragePaths.cpp  TableFileManager.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: DemoScenarioPanel.jsx  HistoryPanel.jsx  QueryEditor.jsx  QueryResult.jsx  ResultCard.jsx  ResultTable.jsx  ResultsPanel.jsx  SqlEditor.jsx  StatusBadge.jsx  TopBar.jsx
frontend/src/data/: demoScenarios.js
frontend/src/hooks/: useKeyboardShortcuts.js  useLocalStorage.js  useServerHealth.js
frontend/src/services/: queryService.js
frontend/src/utils/: databaseContext.js  resultExport.js  scenarioUtils.js  splitSqlScript.js  sqlFormat.js
scripts/benchmarks/: 01_select_without_index.sql  02_select_with_bst.sql  03_select_with_btree.sql
scripts/errors/: 01_insert_errors.sql  02_query_errors.sql  03_drop_table_not_empty.sql  04_index_duplicate_values.sql  05_index_insert_duplicate.sql  06_index_invalid_column.sql  07_encrypted_storage_integrity.sql  08_duplicate_index_same_column.sql  08_one_index_per_table.sql
scripts/success/: 01_crud_fase_f.sql  02_system_catalog.sql  03_drop_table.sql  04_index_bst.sql  05_index_btree.sql  06_encrypted_storage.sql  07_update_delete_with_indexes.sql  08_multiple_indexes_different_columns.sql
